# qqbot

./: .gitignore  Cargo.toml  README.md  config.dev.toml  debug_image_test.rs  kovi.conf.toml  kovi.plugin.toml  libconversation.rlib  连续对话功能修复报告.md
admin/: Cargo.toml  PROJECT_SUMMARY.md  README.md  build.sh  create_demo_data.sh  demo_students.csv  start.sh
admin/frontend/: package-lock.json  package.json
admin/frontend/src/: App.tsx
admin/frontend/src/pages/: BulkMessage.tsx  (+3 more)
admin/src/: main.rs
admin/src/handlers/: config_handler.rs  grade_handler.rs  mod.rs  student_handler.rs
admin/src/models/: config.rs  grade.rs  mod.rs  student.rs
admin/src/services/: message_sender.rs  mod.rs
qqbot-core/: Cargo.toml  config.dev.toml
qqbot-core/examples/: simple_push_test.rs  simple_vision_test.rs  test_conversation.rs  test_default_strategy.rs  test_final_integration.rs  test_group_config.rs  test_group_id_fix.rs  test_image_capture.rs  test_image_vision.rs  test_model_name_update.rs  test_prompt_setting.rs  test_push_command.rs  test_strategy_command.rs  test_strategy_commands.rs  test_strategy_commands_fixed.rs  test_vision_llm.rs
qqbot-core/src/: conversation.rs  error.rs  lib.rs
qqbot-core/src/cmd/: bind.rs  mod.rs  prompt.rs  push.rs  query.rs  strategy.rs
qqbot-core/src/config/: app_config.rs  mod.rs
qqbot-core/src/models/: grade.rs  group.rs  group_config.rs  mod.rs  student.rs  user_config.rs
qqbot-core/src/permission/: mod.rs
qqbot-core/src/reply_strategy/: cmd.rs  llm.rs  llm_full.rs  mod.rs  reply_manager.rs
qqbot-core/src/repo/: grade.rs  group_config.rs  mod.rs  student.rs  user_config.rs
qqbot-core/src/service/: grade_service.rs  group_config_service.rs  mod.rs  push_service.rs  student_service.rs  user_config_service.rs
(+25 files in other folders)
