[package]
name = "admin"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
log = "0.4"
qqbot-core = { path = "../qqbot-core" }
sea-orm = { version = "1.1.8", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
toml = "0.8"
csv = "1.3"
rand = "0.8"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
mime = "0.3"
