[package]
name = "qqbot-core"
version = "0.1.0"
edition = "2024"

[dependencies]
qqbot-derive={path = "../qqbot-derive"}
config = { version = "0.15.11", features = ["toml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
humantime-serde = "1.1.1"
sea-orm = { version = "1.1.8", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-rust_decimal",
] }
clap = { version = "4.5.34", features = ["derive"] }
log = { version = "0.4.27", features = ["serde"] }
async-trait = "0.1"
once_cell = "1.19"
async-once-cell="0.5.4"
moka = { version = "0.12", features = ["future"] } 
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sea-query = "0.32.0"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"